# Astraeus

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md  USAGE.md  phase0-findings.md  phase1-findings.md  phase2-findings.md
docs/examples/: sample_run.json
docs/research/: README.md  central-filesystem.md  harness-engineering.md  harness-sandbox-deep.md  loop-engineering-deep.md  loop-engineering.md  terminal-ui.md
prompts/: decompose.md
src/: decompose.py  docker_backend.py  env.py  merge_gate.py  orchestrator.py  tui.py  worker.py
tests/: test_decompose.py  test_gate_repair.py  test_gate_timeout.py  test_merge_gate.py  test_merge_gate_parse.py  test_run_task.py  test_run_with_cap.py  test_runtime_args.py  test_schedule.py  test_shared_dispatch.py  test_tui.py  test_workspace_fs.py
