[project]
name = "astraeus"
version = "0.0.0"
description = "Astraeus Phase 0 - multi-agent orchestrator walking skeleton"
requires-python = ">=3.11"
dependencies = ["deepagents==0.6.8", "langchain-openai"]

[project.optional-dependencies]
dev = ["pytest"]
tui = ["textual"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
